fix: alter name of package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mineflayer-utils",
+  "name": "@snowrunescape/mineflayer-utils",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "index.d.ts",
