--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@snowrunescape/mineflayer-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "types": "index.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/SnowRunescape/mineflayer-utils"
+    "url": "git+https://github.com/SnowRunescape/mineflayer-utils"
   },
   "scripts": {
     "build": "tsc"
